--- a/html/style.css
+++ b/html/style.css
@@ -1,3 +1,14 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.canvas-div {
+    width: 100%;
+    height: 100%;
+}
+
 .myCanvas {
-    border: 1px solid red;
+    display: block;
+    margin: 0 auto;
 }
